# selene-py-intro

./: pyproject.toml
tests/: test_google_search.py
